refactor: migrate api ui to configsets
